# screenOCR

./: .gitignore  LICENSE  README.md  app.py  install_user.sh  main.py  pyproject.toml  requirements.txt  settings.py  tessdata_manager.py  uninstall_user.sh
core/: export_manager.py  image_processor.py  ocr_engine.py  pdf_handler.py
ui/: main_window.py  screenshot.py  theme.py  workers.py
ui/panels/: actions_panel.py  log_panel.py  preview_panel.py  result_panel.py  settings_panel.py
utils/: i18n.py
